# deepLearning

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
notebooks/: 1_cnn_transferLearning.ipynb  2_cnn_VOS.ipynb  3_ae&vae.ipynb
