[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deeplearningcourse"
version = "0.0.1"
description = "A repo with a few examples of common models and techniques of deep learning."
authors = [
  { name = "stevoAngel" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["deeplearningcourse"]
include = ["pyproject.toml", "deeplearningcourse/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["deeplearningcourse"]
force-sort-within-sections = true

